tests/002_int.pan.out
tests/002_int.pan:22:7-8: error: invalid subtype: {_:â„¤ | _ = 1} <: {v:â„¤ | v = 2}
tests/002_int.pan:25:7-8: error: invalid subtype: {_:â„¤ | _ = 1} <: {v:â„¤ | v > 2}
tests/002_int.pan:28:7-8: error: invalid subtype: {_:â„¤ | _ = 1} <: {v:â„¤ | v < 1}
tests/002_int.pan:31:7-8: error: invalid subtype: {_:â„¤ | _ = 1} <: {v:â„¤ | v â‰  1}
tests/002_int.pan:34:7-8: error: invalid subtype: â„¤ <: ðŸ™
tests/002_int.pan:37:7-8: error: invalid subtype: â„¤ <: ðŸ™
tests/002_int.pan:40:7-8: error: invalid subtype: â„¤ <: ð”¹
tests/002_int.pan:43:7-8: error: invalid subtype: â„¤ <: ð”¹
tests/002_int.pan:46:7-8: error: invalid subtype: â„¤ <: ð•Š
tests/002_int.pan:49:7-8: error: invalid subtype: â„¤ <: ð•Š
f0 : â„¤
f1 : â„¤
f2 : {v:â„¤ | v = 1}
f3 : {v:â„¤ | v = 1}
f4 : {v:â„¤ | v â‰¥ 1}
f5 : {v:â„¤ | v < 2}
f6 : {v:â„¤ | v â‰  2}